# QuantTradSys

./: .gitignore  AGENTS.md  ALPHA_RESEARCH_UPDATE_20260126.md  README.md  UI.md  dummy_state.db  memo.md  pipeline_run_mean_rev.py  pyproject.toml  requirements.txt  run_mean_reversion_scheduler.py
config/: .env.example
docs/: ui_dashboard.md
scripts/: _setup.py  analyze_report.py  backfill_ohlcv.py  cat_utf8.ps1  check_db.py  grid_search_execution.py  interactive_backtest.py  manual_alpaca_trade.py  pipeline_run_mean_rev.py  pipeline_run_star_xgb.py  prune_ohlcv.py  render_mean_reversion_report.py  render_star_xgb_report.py  report.py  rollback_ohlcv.py  run_scheduler.py  run_ui_dashboard.py  test_binance_close_position.py  test_dispatcher.py  train.py
scripts/templates/: playground.html
src/: run_mean_rev.ps1  run_mean_reversion_scheduler.py  run_star_xgb_scheduler.py
src/brokers/: __init__.py  alpaca.py  binance.py
src/config/: env.py  paths.py
src/data_pipeline/: binance_ws.py  ccxt_fetcher.py  client.py  reader.py
src/database/: connection.py  schema.py
src/engine/: realtime.py
src/notifier/: dispatcher.py
src/optimization/: engine.py  mean_reversion_optuna.py  star_xgb_optuna.py
src/persistence/: market_store.py  param_store.py  runtime_store.py  trade_store.py
src/pipelines/: mean_reversion.py  mean_reversion_realtime.py  quick_backtest.py
src/reporting/: __init__.py  chart_utils.py  (+5 more)
test/: auto_train.py  conftest.py  manual_alpaca_trade.py  test_alpaca_order.py  test_alpaca_symbol.py  test_binance_close_position.py  test_dispatcher.py
(+43 files in other folders)
